# ML-Model-Recommender-API

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLAN.md  README.md  SECURITY.md  VERSION_2.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  serverless.yml  setup.cfg
.github/workflows/: ci-cd.yml
app/: classifier.py  config.py  db.py  main.py  models.yml  recommender.py  remover.py  token_estimator.py
test/: test_recommender.py
update_models/: update.py
